<resources>
    <string name="app_name">UrlBox</string>
    <string name="tx_splash_title_01">UrlBox</string>
    <string name="tx_splash_tx_02">링크를 저장하세요</string>
    <string name="tx_appbar_title">UrlBox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tx_save_url">링크 추가 및 저장</string>
    <string name="tx_saved_url_list">저장된 링크</string>
    <string name="tx_add_link">링크 추가</string>
    <string name="tx_paste_url">복사한 URL 붙여넣기</string>
    <string name="tx_capture">캡쳐 화면</string>
    <string name="tx_btn_capture">캡쳐하기</string>
    <string name="tx_save">저장하기</string>
    <string name="tx_url_detail">상세정보</string>
    <string name="tx_delete">삭제하기</string>
    <string name="tx_change_img">사진변경</string>
    <string name="tx_skip">스킵</string>
    <string name="tx_thumbnail_list">썸네일 모음</string>
    <string name="tx_cancel">취소</string>
    <string name="tx_profile_guest">게스트</string>
    <string name="tx_profile_guest_emil">user@example.com</string>
    <string name="tx_edit_profile">프로필 수정</string>
    <string name="tx_link_count">0</string>
    <string name="tx_link">링크</string>
    <string name="tx_folder">폴더</string>
    <string name="tx_folder_count">0</string>
    <string name="tx_favorites_count">0</string>
    <string name="tx_favorites">즐겨찾기</string>
    <string name="tx_show_all_link">모든 저장된 링크 보기</string>
    <string name="tx_saved_link">클립보드</string>
    <string name="tx_my_folder">내 폴더</string>
    <string name="tx_folder_detail">링크를 정리하세요</string>
    <string name="tx_show_favorite">즐겨찾는 항목 보기</string>
    <string name="tx_favorite">즐겨찾기</string>
    <string name="tx_logout">로그아웃</string>
    <string name="tx_use_guest_mode">게스트로 이용하기</string>
    <string name="tx_login">로그인</string>
    <string name="tx_save_through_login">링크를 보관하고 \n공유하세요</string>
    <string name="tx_google_login">Google 로그인</string>
    <string name="tx_login_kakao">카카오 로그인</string>
    <string name="tx_backup_to_account">계정에 데이터를 동기화하고 모든 기기에서 접근할 수 있도록 허용합니다</string>
    <string name="tx_setting_info">설정 및 정보</string>
    <string name="tx_set_lauguage">언어 설정</string>
    <string name="tx_set_language_detail">앱 표시 언어 설정</string>
    <string name="tx_app_info">앱 정보</string>
    <string name="tx_app_info_detail">앱 정보 더보기</string>
    <string name="tx_feedback">피드백</string>
    <string name="tx_feedback_detail">웹 폼으로 의견 보내기</string>
    <string name="feedback_form_url" translatable="false">https://docs.google.com/forms/d/e/1FAIpQLScjRcS880D_OBJ29SwAaCrMaaJgyclTJey7Lj99RiZRrZYzmQ/viewform?usp=publish-editor</string>
    <string name="tx_terms">개인정보처리방침</string>
    <string name="tx_terms_detail">개인정보처리방침</string>
    <string name="tx_use_terms_detail">서비스 이용약관</string>
    <string name="tx_version">앱 버전</string>
    <string name="tx_version_detail">1.2.3</string>
    <string name="tx_language_setting">언어 선택</string>
    <string name="tx_korean" translatable="false">한국어</string>
    <string name="tx_english" translatable="false">English</string>
    <string name="tx_japanese" translatable="false">日本語</string>
    <string name="tx_thumbnail">썸네일</string>
    <string name="tx_my_page">마이페이지</string>
    <string name="tx_url">URL</string>
    <string name="tx_loading">로딩중..</string>
    <string name="tx_url_name">URL 이름</string>
    <string name="tx_enter_url_name">URL 이름 입력</string>
    <string name="tx_memo">메모</string>
    <string name="tx_visit_url">URL 방문</string>
    <string name="tx_choose_album">앨범에서 선택</string>
    <string name="tx_back">뒤로가기</string>
    <string name="tx_refresh">새로고침</string>
    <string name="tx_tag">태그</string>
    <string name="tx_search_tag">태그 검색</string>
    <string name="tx_set_tag">태그 설정하기</string>
    <string name="tx_setting_tag">태그 설정</string>
    <string name="tx_current_tag">현재 태그</string>
    <string name="tx_edt_tag_detail">(선택사항) 태그 직접 입력하기 ex) 음악</string>
    <string name="tx_edt_tag_detail_02">태그 직접 입력하기 ex) 음악</string>
    <string name="tx_privacy_policy">개인정보 처리 방침</string>
    <string name="tx_use_of_terms">이용약관</string>
    <string name="tx_write_review">리뷰 작성</string>
    <string name="tx_add">추가</string>
    <string name="tx_login_detail">로그인하여 모든 기기에서  링크를 동기화하세요</string>
    <string name="tx_or">또는</string>
    <string name="tx_guest_continue">게스트로 계속하기</string>
    <string name="tx_syncing">계정에 동기화 중입니다…</string>
    <string name="tx_link_english">LINK</string>
    <string name="tx_tags">태그</string>
    <string name="tx_add_tag">태그 추가</string>
    <string name="tx_my_tags">내 태그</string>
    <string name="tx_input_tag">태그를 입력하세요</string>
    <string name="tx_change_pic">사진 변경</string>
    <string name="tx_example_link" translatable="false">https://www.youtube.com/wersadfasdgwear</string>
    <string name="tv_tutorial_01">링크를 한 곳에</string>
    <string name="tv_tutorial_detail_01">흩어진 북마크를 썸네일로 보기 좋게 \n저장하세요</string>
    <string name="tx_app_info_tutorial_01">UrlBox - 링크 관리의 새로운 방법</string>
    <string name="tx_swipe_tutorial"><![CDATA[> 스와프하거나 다음 버튼을 눌러주세요]]></string>
    <string name="tx_next">다음</string>
    <string name="tx_start">시작하기</string>
    <string name="tv_tutorial_02">썸네일 캡처 화면</string>
    <string name="tv_tutorial_detail_02">URL을 입력하면 썸네일 캡처를 위한 \n화면이 나와요</string>
    <string name="tv_tutorial_03">태그로 정리</string>
    <string name="tv_tutorial_detail_03">자유롭게 태그를 붙여 링크를 쉽게 \n분류하고 찾으세요</string>
    <string name="tx_chose_album">앨범에서 선택</string>
    <string name="tx_ad_label">광고</string>
    <string name="tx_admin_feedback_title">피드백 관리</string>
    <string name="tx_admin_feedback_subtitle">Google Form 응답이 Firebase로 들어온 목록입니다.</string>
    <string name="tx_feedback_admin_empty">피드백이 아직 없습니다.</string>
    <string name="tx_feedback_admin_change_status">상태 변경</string>
    <string name="tx_update_info">새 기능 안내</string>
    <string name="tx_ex_url_link"><![CDATA[https://www.youtube.com/watch?v=KifSefVEdBs&list=RDKifSefVEdBs&start_radio=1]]></string>
    <string name="tx_update_link_edt_02">이제 저장된 링크를 직접 수정할 수 있어요. 링크 상세 \n화면에서 Link 항목을 꾹 눌러보세요.</string>
    <string name="tx_update_link_edt_05">이제 링크가 즉시 업데이트됩니다. 잘못 저장된 URL도 \n쉽게 고칠 수 있어요.</string>
    <string name="tx_update_link_edt_01">링크 수정 기능 추가!</string>
    <string name="tx_update_link_edt_03">수정 후 완료 입력</string>
    <string name="tx_update_link_edt_04">수정 모드가 활성화되면 링크를 편집하고, 키보드의 \n완료(Enter)를 누르면 저장돼요.</string>
    <string name="tx_enter_put">완료(Enter) 입력</string>
    <string name="tx_update_link_edt_finish">완료!</string>
    <string name="tx_hidden_folder">숨김 폴더</string>
    <string name="tx_hidden_folder_link_count">%1$d개의 링크</string>
    <string name="tx_hidden_folder_link_count_99">99+개의 링크</string>
    <string name="tx_no_password">비밀번호가 없어요</string>
    <string name="tx_no_password_desc">지금은 누구나 숨김 폴더를 열 수 있어요. 설정에서 PIN을 등록하면 잠금이 활성화됩니다.</string>
    <string name="tx_set_password_now">지금 비밀번호 설정하기</string>
    <string name="tx_open_anyway">그냥 열기</string>
    <string name="desc_password_icon">비밀번호</string>
    <string name="tx_pin_setup_header">비밀번호 설정</string>
    <string name="tx_pin_create_title">새 비밀번호 설정</string>
    <string name="tx_pin_create_description">사용할 4자리 PIN을 입력하세요</string>
    <string name="tx_pin_confirm_title">비밀번호 확인</string>
    <string name="tx_pin_confirm_description">한 번 더 입력해주세요</string>
    <string name="tx_pin_setup_success_title">설정 완료!</string>
    <string name="tx_pin_setup_success_description">새 비밀번호가 저장됐어요</string>
    <string name="tx_pin_mismatch">비밀번호가 일치하지 않아요. 다시 입력해주세요.</string>
    <string name="tx_hidden_folder_usage">사용법</string>
    <string name="tx_hidden_pin_input">PIN 입력</string>
    <string name="tx_hidden_pin_forgot">비밀번호를 잊으셨나요?</string>
    <string name="tx_hidden_pin_invalid">PIN이 올바르지 않아요.</string>
    <string name="tx_hidden_link_empty_title">숨김 링크가 없습니다</string>
    <string name="tx_hidden_link_empty_desc">모든 숨은 링크를 만나요</string>

    <string name="tx_hidden_pin_reset_title">비밀번호를 초기화할까요?</string>
    <string name="tx_hidden_pin_reset_message">초기화하면 숨김 링크가 모두 삭제됩니다. 계속하시겠어요?</string>
    <string name="tx_hidden_pin_reset_no_user">사용자 정보가 없습니다.</string>
    <string name="tx_hidden_pin_reset_done">비밀번호가 초기화되고 숨김 링크가 삭제되었습니다.</string>
    <string name="tx_hidden_pin_reset_failed">초기화에 실패했습니다. 다시 시도해주세요.</string>
    <string name="tx_reset">초기화</string>

    <string name="tx_persist_hidden">앱 종료 시 숨김 상태 유지</string>
    <string name="tx_persist_hidden_detail">토글한 상태를 앱을 종료했다가 켜면 \n그대로 유지합니다</string>

    <!-- Hidden Folder Tutorial -->
    <string name="tx_update_hidden_folder_title_01">숨김 폴더 기능</string>
    <string name="tx_update_hidden_folder_desc_01">개인적인 링크를 비밀번호로 보호하세요</string>
    <string name="tx_update_hidden_folder_title_02">숨김 폴더 사용법</string>
    <string name="tx_update_hidden_folder_desc_02">숨기려는 URL을 길게 누르면 숨길 수 있습니다</string>
    <string name="tx_update_hidden_folder_title_03">숨김 URL 표시하기</string>
    <string name="tx_update_hidden_folder_desc_03">상단 아이콘을 꾹 눌러 숨김 URL을 표시할 수 있습니다</string>

    <!-- 카카오톡 공유 튜토리얼 -->
    <string name="tx_update_share_title">카카오톡으로 공유하기</string>
    <string name="tx_update_share_desc">공유 버튼으로 카카오톡에 빠르게 \n링크를 보낼 수 있어요</string>
    <string name="tx_update_get_share_title">카카오톡에서 받은 링크 자동 저장</string>
    <string name="tx_update_get_share_desc">카카오톡에서 [앱에서 열기]를 누르면\n썸네일과 URL이 자동으로 저장돼요</string>
    <string name="tx_share_receive_title">공유 링크를 받아오는 중</string>
    <string name="tx_share_receive_desc">썸네일과 링크를 저장하고 있어요</string>
    <string name="tx_share_receive_status">공유 링크 저장 중... (%1$d/%2$d)</string>

    <string name="tx_update_feedback_title">개발자에게 한마디</string>
    <string name="tx_update_feedback_desc">상단 피드백 버튼을 눌러 개발자에게 \n소중한 의견을 전달해주세요</string>
    
    <!-- Final confirmation for reset -->
    <string name="tx_hidden_pin_reset_confirm_title">정말로 초기화하시겠습니까?</string>
    <string name="tx_copy">복사</string>
    <string name="tx_hide">숨기기</string>
    <string name="tx_delete_url">삭제</string>
    <string name="tx_restore">복원하기</string>
    <string name="tx_restore_02">복원하기</string>
    <string name="tx_share">공유</string>
    <string name="tx_share_bottom_sheet">공유</string>
    <string name="tx_hide_bottom_sheet">숨기기</string>
    <string name="tx_delete_bottom_sheet">삭제</string>
    <string name="tx_share_popup">공유하기</string>
    <string name="tx_share_via_kakaotalk">카카오톡 공유</string>
    <string name="tx_share_url">URL 공유</string>

</resources>